updated lots of deprecated dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
     "compilerOptions": {
         "target": "esnext",
         "moduleResolution": "node",
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "allowImportingTsExtensions": true, // Nueva opción añadida
+        "noEmit": true // Añade esta opción o ajusta según tus necesidades
     }
 }
