--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "version": "1.0.0",
     "license": "MIT",
     "devDependencies": {
-        "@parcel/transformer-image": "2.0.0-rc.0",
-        "parcel": "^2.0.0-rc.0"
+        "@parcel/transformer-image": "^2.11.0",
+        "parcel": "^2.0.0-rc.0",
+        "process": "^0.11.10"
     },
     "scripts": {
         "dev:front": "parcel serve ./client/index.html",
@@ -20,10 +21,11 @@
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
-        "firebase": "8.7.1",
-        "firebase-admin": "^9.12.0",
+        "firebase": "^8.10.1",
+        "firebase-admin": "^12.0.0",
         "nanoid": "^3.1.29",
         "nodemon": "^2.0.13",
-        "typescript": "^4.4.3"
+        "ts-node": "^10.9.2",
+        "typescript": "^5.3.3"
     }
 }
