--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,6 @@
     "compilerOptions": {
         "target": "esnext",
         "moduleResolution": "bundler",
-        "resolveJsonModule": true,
-        "noEmit": true
+        "resolveJsonModule": true
     }
 }
