--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,6 @@
         "noEmit": false,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true
-    }
+    },
+    "exclude": ["node_modules/@google-cloud/storage", "node_modules/google-auth-library"]
 }
