--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "target": "esnext",
         "moduleResolution": "bundler",
         "resolveJsonModule": true,
-        "noEmit": false,
+        "allowImportingTsExtensions": true,
+        "noEmit": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true
     },
